<resources>
    <string name="app_name">Movie Review App</string>
    <string name="title_signup">Sign Up</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="save">Save</string>
    <string name="full_name_required">Full name is required!</string>
    <string name="email_required">Email is required!</string>
    <string name="invalid_email">Invalid email!</string>
    <string name="phone_required">Phone is required!</string>
    <string name="password_required">Password is required!</string>
    <string name="password_minimum_length">Password length should be minimum of 6 characters!</string>
    <string name="password_mismatch">Confirm password should be same as password!</string>
    <string name="user_saved_successfully">User has been saved successfully!</string>
    <string name="movies">Movies</string>
    <string name="signup">Sign Up</string>
    <string name="dontHaveAccount">Don\'t have an account?</string>
    <string name="btn_login">Login</string>
    <string name="already_member">Already Member?</string>
    <string name="invalid_username_or_password">Invalid username or password!</string>
</resources>