<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="@dimen/_20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_full_name"
        android:background="@drawable/rounded_edittext_background"
        android:padding="@dimen/_16dp"
        android:hint="@string/full_name"
        android:inputType="textCapWords"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_email"
        android:background="@drawable/rounded_edittext_background"
        android:padding="@dimen/_16dp"
        android:hint="@string/email"
        android:layout_marginTop="@dimen/_16dp"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_phone"
        android:background="@drawable/rounded_edittext_background"
        android:padding="@dimen/_16dp"
        android:hint="@string/phone"
        android:layout_marginTop="@dimen/_16dp"
        android:inputType="phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_password"
        android:background="@drawable/rounded_edittext_background"
        android:padding="@dimen/_16dp"
        android:hint="@string/password"
        android:layout_marginTop="@dimen/_16dp"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_confirm_password"
        android:background="@drawable/rounded_edittext_background"
        android:padding="@dimen/_16dp"
        android:hint="@string/confirm_password"
        android:layout_marginTop="@dimen/_16dp"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>